--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
-    "db:seed": "node prisma/seed.js"
+    "db:seed": "node prisma/seed.js",
+    "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
@@ -25,7 +26,6 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "prisma": "^6.18.0",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
